added new Tasks and Dates funtions
