# services/CalenderService.js
@@ -29,6 +29,7 @@ const addDate = ({ body }) => new Promise(
     }
   },
 );
+
 /**
 * Delete date by date ID
 * Delete date by date ID. Argument passed in must be a single String of 12 bytes or a string of 24 hex characters
@@ -36,11 +37,11 @@ const addDate = ({ body }) => new Promise(
 * eventOrCalenderID String ID of the date that needs to be deleted from the DB
 * returns inline_response_200_2
 * */
-const deleteDateByDateId = ({ eventOrCalenderID }) => new Promise(
+const deleteOneDateByDateId = ({ DateID }) => new Promise(
   async (resolve, reject) => {
     try {
 	      let itemsDeleted = 0;
-	      await mongoDB.collectioncalender.deleteOne({_id: mongoDB.mongodb.ObjectID(eventOrCalenderID)})
+	      await mongoDB.collectioncalender.deleteOne({_id: mongoDB.mongodb.ObjectID(DateID)})
 			.then(result => {
 		 	  itemsDeleted = (`${result.deletedCount}`);
 			}
@@ -56,6 +57,35 @@ const deleteDateByDateId = ({ eventOrCalenderID }) => new Promise(
     }
   },
 );
+
+/**
+* Delete date by date ID
+* Delete date by date ID. Argument passed in must be a single String of 12 bytes or a string of 24 hex characters
+*
+* EventID String ID of the date that needs to be deleted from the DB
+* returns inline_response_200_2
+* */
+const deleteAllDatesByEventId = ({ EventID }) => new Promise(
+  async (resolve, reject) => {
+    try {
+	      let itemsDeleted = 0;
+	      await mongoDB.collectioncalender.deleteMany({eventId: EventID})
+			.then(result => {
+		 	  itemsDeleted = (`${result.deletedCount}`);
+			}
+	      )
+		    .catch(err => console.error(`Delete failed with error: ${err}`))
+		
+        resolve(Service.successResponse({response: 'Deleted ' + itemsDeleted + ' items'}));
+    } catch (e) {
+      reject(Service.rejectResponse(
+        e.message || 'Invalid input',
+        e.status || 405,
+      ));
+    }
+  },
+);
+
 /**
 * Get all dates
 * Get all existing dates in DB
@@ -76,18 +106,19 @@ const getAllDates = () => new Promise(
     }
   },
 );
+
 /**
 * Find dates by eventID
 * get all the Dates for the given Event ID. The Id is the event _id. Argument passed in must be a single String of 12 bytes or a string of 24 hex characters
 *
-* eventOrCalenderID String ID of Event DB
+* dateID String ID of Event DB
 * returns calender
 * */
-const getAllDatesByEventId = ({ eventOrCalenderID }) => new Promise(
+const getAllDatesByEventId = ({ EventID }) => new Promise(
   async (resolve, reject) => {
     try {
     	let eventByIdArray = [];
-    	eventByIdArray = await mongoDB.collectioncalender.find({eventId: eventOrCalenderID}).toArray();
+    	eventByIdArray = await mongoDB.collectioncalender.find({eventId: EventID}).toArray();
         resolve(Service.successResponse(eventByIdArray));
     } catch (e) {
       reject(Service.rejectResponse(
@@ -97,20 +128,43 @@ const getAllDatesByEventId = ({ eventOrCalenderID }) => new Promise(
     }
   },
 );
+
+/**
+* Find one date by dateID
+* get all the Dates for the given Event ID. The Id is the event _id. Argument passed in must be a single String of 12 bytes or a string of 24 hex characters
+*
+* dateID String ID of Event DB
+* returns calender
+* */
+const getOneDateByDateId = ({ DateID }) => new Promise(
+  async (resolve, reject) => {
+    try {
+    	let eventByIdArray = [];
+    	eventByIdArray = await mongoDB.collectioncalender.find({_id: mongoDB.mongodb.ObjectID(DateID)}).toArray();    	
+        resolve(Service.successResponse(eventByIdArray));
+    } catch (e) {
+      reject(Service.rejectResponse(
+        e.message || 'Invalid input',
+        e.status || 405,
+      ));
+    }
+  },
+);
+
 /**
 * Add a new calender to the DB
 * Update dates for the given date ID. The Id is the date. Argument passed in must be a single String of 12 bytes or a string of 24 hex characters
 *
-* eventOrCalenderID String ID of the date that needs to be updated
+* dateID String ID of the date that needs to be updated
 * calender Calender 
 * returns calender
 * */
-const updateDateByID = ({ eventOrCalenderID, body }) => new Promise(
+const updateOneDateByDateid = ({ DateID, body }) => new Promise(
   async (resolve, reject) => {
     try {
         await mongoDB.collectioncalender.updateOne(
                 {
-                  _id: mongoDB.mongodb.ObjectID(eventOrCalenderID)
+                  _id: mongoDB.mongodb.ObjectID(DateID)
                 },
                 {$set: body});
                 
@@ -126,8 +180,10 @@ const updateDateByID = ({ eventOrCalenderID, body }) => new Promise(
 
 module.exports = {
   addDate,
-  deleteDateByDateId,
+  deleteOneDateByDateId,
+  deleteAllDatesByEventId,
   getAllDates,
   getAllDatesByEventId,
-  updateDateByID,
+  getOneDateByDateId,
+  updateOneDateByDateid,
 };
